models/model-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: model_api-deployment
spec:
  replicas: 3  # Nombre de répliques souhaitées
  selector:
    matchLabels:
      app: model_api
  template:
    metadata:
      labels:
        app: model_api
    spec:
      containers:
        - name: model-container
          image: projet_final/model_api:0.0.1
          ports:
            - containerPort: 9000  # Port sur lequel le service est exposé dans le conteneur
