models/model-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: model_api-service
spec:
  selector:
    app: model_api  # Étiquette du sélecteur correspondant au déploiement
  ports:
    - protocol: TCP
      port: 9000  # Port que le service expose
      targetPort: 9000  # Port du conteneur du déploiement
